fix z-index in  nav

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -102,13 +102,14 @@ transition:  all .3s ease-in-out;
  position: fixed;
  top: 0;
  left: 0;
- z-index: 8;
+ z-index: -8;
  background-color: #fff;
  transition: all .3s ease-in-out;
  transform: translateX(-100%);
 
  .opened & {
     transform: translateX(0); 
+    z-index: 8;
  }
 }
 
